--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "npm run build"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
